2012-08-09
 Started on infrastructure for package definitions.
 Include a snit definition file in distribution.

2012-08-09
 New token "nl" to handle "dict for"'s variable list.
 
2012-01-05
 Recognise "others" in last switch branch as a possible mistake.

Version 1.1.12

2011-11-27
 Recognise common construct ${ns}::var as non-suspicious.

2011-11-26
 Made it possible to customize how Nagelfar is installed.

2011-10-15
 Corrected some trace sub commands in syntax database.

2011-08-09
 Added checks for array/scalar mixup.

2011-04-19
 Further processing to diagnose missing brace.

2011-04-17
 Added -H command line switch.

2010-10-05
 Support for tcloo's implicit variables
 Support for tcloo "my" command.
 Support for tcloo "next" command.

2010-10-04
 Provide _stdclass_oo in syntaxdb.
 Handle constructor and superclass in oo.

2010-10-01
 Do not check proc/method name against variables

2010-09-30
 Make command line -s search in the list of builtin databases

Version 1.1.11

2010-09-30
 Added inline keyword for alias

2010-09-25
 Changed novar to only suppress errors, not suppress tracking, to better
 support OO, e.g. in instrumenting.

2010-06-03
 Handle simple string substitution in ##nagelfar copy

2010-05-28
 Added syntax tokens for proc and method definitions.
 Make sure commands with definitions get through the first pass.
 Command "proc" is now handled through the new token. 

2010-05-25
 Added a syntax token for object definitions.

2010-05-23
 Added a syntax token for definitions.

2010-05-23
 Handle implicit variables, to support OO better.
 Handle if some other namespace defines "proc".

2010-05-18
 Handle tailcall.
 Made messages more consistent.

Version 1.1.10

2010-05-16
 Added more of zlib and tcl::prefix in syntaxbuild.
 Added more of chan in syntaxbuild.

2010-05-16
 Corrected output in db browser. Fixed GUI test for db browser.

2010-05-16
 More OO in syntaxbuild.
 Handle when a token "s" is not first.

2010-05-12